backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-app
  template:
    metadata:
      labels:
        app: backend-app
    spec:
      containers:
      - name: backend-app
        image: hug58/users-api-go:v1
        command: ["/users-api"]
        ports:
        - containerPort: 8080
