backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  type: ClusterIP
  selector:
    app: backend-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
